# quantum-machine-learning

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
adhd_data/: ADHD200_site-Brown_list.csv  ADHD200_site-NYU_list.csv  ADHD200_site-OHSU_list.csv
data/: ADHD200_download_links.sh  ADHD200_site-NeuroIMAGE_list.csv  ADHD200_site-Pittsburgh_list.csv  ADHD200_site-WashU_list.csv
data/adhd_data/: ADHD200_site-KKI_list.csv  ADHD200_site-Peking_list.csv
data/input/: Phenotypic_V1_0b_preprocessed1_from_isa.csv  raw_data.xlsx
data/output/: 01_imputed_data.csv  02_correlation_matrix_pearson.csv  02_correlation_matrix_spearman.csv  02_pps_matrix.csv  02_pps_matrix_pivot.csv  02_pps_matrix_raw.csv  02_pps_matrix_target_only.csv  03_X_train.csv  03_y_train.csv  04_model_comparison_results.csv  05_best_hyperparameters_LightGBM.json  05_best_hyperparameters_XGBoost.json  dropped_columns_report.csv  imputed_data.csv  remaining_missing_values.csv  selected_features.json
docs/: RESEARCH_JOURNAL.md
output/: imputed_data.csv  remaining_missing_values.csv
src/: config.py  get_data_adhd.py  logger.py  main.py  run_adhd.py  run_asd.py  utils.py
src/processing/: analysis.py  cleaning.py  explainability.py  features.py  imputation.py  modeling.py  tuning.py
src/shared/: config.py  styles.py  translate.py  utils.py
src/steps/: 01_data_cleaning.py  02_exploratory.py  03_feature_engineering.py  04_model_training.py  05_optimization.py  06_explainability.py
src/utils/: common.py  config.py
