[project]
name = "quantum-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "ppscore>=1.1.0",
    "pyside6>=6.10.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "setuptools<81",
    "xgboost>=3.1.2",
]
